syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.davincischools.leo.protos.partial_text_openai_prompt";

package partial_text_openai_prompt;

service PartialTextOpenAiPromptService {
  rpc GetSuggestions (GetSuggestionsRequest) returns (GetSuggestionsResponse) {}
}

message GetSuggestionsRequest {
  optional string partial_text = 1;

  // The reason we have a limited number of prompts is that it prevents someone
  // from hacking into the website and creating custom queries using our OpenAI
  // key.
  enum Prompt {
    UNSPECIFIED = 0;  // This should never be used. But, it is required.
    SUGGEST_THINGS_YOU_LOVE = 1;
    SUGGEST_THINGS_YOU_ARE_GOOD_AT = 2;
  }
  optional Prompt prompt = 2;
}

message GetSuggestionsResponse {
  repeated string suggestions = 1;
}
